--- a/Css/shares/button.css
+++ b/Css/shares/button.css
@@ -2,11 +2,10 @@
 .btn{
 	background-color: var(--color-pink);
 	color: var(--color-white);
-	letter-spacing: o.1em;
+	letter-spacing: 1.6px;
 	font-weight: 600;
 	font-size: 16px;
+	line-height: 24px;
 	cursor: pointer;
-	padding: 14px 41px;
 	border-radius: 50px;
-
 }
