--- a/Css/components/footer.css
+++ b/Css/components/footer.css
@@ -1,15 +1,17 @@
 .Footer{
 	width: 100%;
-
+    height: 705.34px;
+	transform: translateY(-49%);
+	clear: both;
 }
 .footer_wrapper{
 	position: relative;
 	display: flex;
 	max-width: 1540px;
 	margin: auto;
-	background-image: url("../../access/icon_home1/Footer BG 2.png");
+	background-image: url("../../assets/icon_home1/Footer\ BG\ 2.png");
 	background-repeat: no-repeat;	
-	min-height: 706px;
+	height: 704.37px;
 	background-size: cover;
 	z-index: 0;
 	
@@ -20,51 +22,82 @@
 	bottom: 0px;
 	z-index: -1;
 	width: 100%;
-	min-height: 506px;
+	height: 125px;
 	background-color: var(--color-bgr-footer);
 
 }
 .footer_container-fluid{
 	width: 100%;
-	min-height: 706px;
-	background-image: url("../../access/icon_home1/Footer BG 1.png");
+	height: 704.37px;
+	background-image: url("../../assets/icon_home1/Footer\ BG\ 1.png");
 	background-repeat: no-repeat;
 	background-size: cover;
-	
 }
 .footer_container{
-	margin: auto;
-	margin-top: 250px;
-	width: 80%;
-	padding: 0px 20px;	
+    width: 100%;
+	margin-left: 150px;
+    margin-top: 240px;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
 }
 
+.footer_col {
+	display: flex;
+	align-items: flex-start;
+	margin-bottom: 50px;
+}
 
+.footer_info {
+	
+}
 
 .footer_info-describes{
-	margin-top: 40px;
-	margin-left: 20px;
+	margin-top: 27px;
+    margin-left: 31px;
 	color: var(--color-border-text);
 	font-size: 16px;
 	letter-spacing: 0.1em;
-	font-weight: 300px;
 }
 .footer_info-describe{
-	font-size: 17px;
+	line-height: 24px;
+	letter-spacing: 1.6px;
+	width: 461px;
+	height: 21px;
+}
 
+.footer_info-address {
+	font-style: italic;
+	line-height: 21px;
+	letter-spacing: 1.4px;
+	color: #D7DBFF;
+	width: 287px;
+	height: 24px;
+	margin-top: 1px;
+    margin-left: 1px;
 }
-.footer_info-contact{
-	margin-top: 5px;
+.footer_info-contacts {
+	margin-top: -1px;
 }
-.footer_info-enail{
-	margin-left: 30px;
+
+.footer_info_phoneNumber {
+	width: 140px;
+	height: 23px;
+	font-style: italic;
+	line-height: 21px;
+	letter-spacing: 1.4px;
+	color: #D7DBFF;
+}
+.footer_info_email{
+	width: 190px;
+	height: 23px;
+	font-style: italic;
+	line-height: 21px;
+	margin-left: 36px;
+	letter-spacing: 1.4px;
 	text-decoration: underline;
-}
-.footer_col{
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	margin-bottom: 50px;
+	color: #D7DBFF;
 }
 .footer_more{
 	display: flex;
