--- a/Css/components/footer.css
+++ b/Css/components/footer.css
@@ -35,12 +35,12 @@
 }
 .footer_container{
     width: 100%;
-	margin-left: 150px;
-    margin-top: 240px;
+	margin-top: 225px;
+    padding-left: 150px;
 }
 .row {
     display: flex;
-    flex-wrap: wrap;
+    width: 100%;
 }
 
 .footer_col {
@@ -50,7 +50,7 @@
 }
 
 .footer_info {
-	
+	margin-top: 15px;
 }
 
 .footer_info-describes{
@@ -102,48 +102,60 @@
 .footer_more{
 	display: flex;
 	justify-content: space-around;
-	width: 100%;
+	/* width: 100%; */
+	width: 730px;
 	color: var(--color-border-text);
-	font-size: 17px;
 	letter-spacing: 0.1em;
+	line-height: 27px;
+	padding-left: 130px;
+}
+
+.footer_more-page {
 
 }
+
+.footer_more-informations {
+	margin-left: 7px;
+}
+
 .footer_more-children{
 	width: 50%;
-
 }
 .footer_more-children ul{
-	margin-top: 40px;
+	margin-top: 26px;
 }
 .footer_more-children ul li{
-	font-size: 15px;
-	margin: 10px 0px;
+	font-size: 16px;
+	margin: 11px 0px;
 	transition: .5s;
 	cursor: pointer;
+	line-height: 24px;
+	font-weight: 400;
+	letter-spacing: 1.6px;
 }
 .footer_more-children ul li:hover{
 	transform: translateX(10px);
 	color: var(--color-text-hover);
 }
 .footer_group-icon{
-	margin-bottom: 20px;
+	width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 
 .footer_bottom{
-	margin-top: 50px;
+	margin-top: 81px;
+    display: flex;
 }
 .footer_internet{
-	width: 86%;
-	margin: auto;
+	width: 305px;
+	height: 27.84px;
 	display: flex;
 	justify-content: left;
 }
 
 .icon{
-	
-	margin: 0px 20px;
-	
 	cursor: pointer;
 }
 .icon img{
@@ -154,19 +166,26 @@
 }
 
 .footer_certification{
+	width: 497px;
+	height: 31.18px;
 	color: var(--color-border-text);
-	font-size: 15px;
-	letter-spacing: 0.1em;
+	letter-spacing: 1.6px;
+	text-align: right;
+	line-height: 24px;
+	font-style: normal !important;
 }
 
-
+.fa-caret-right {
+	color: #D7DBFF;
+	margin-right: 10px;
+}
 
 .footer_scroll{
 	position: absolute;
 	width: 50px;
 	height: 50px;
-	bottom: 180px;
-	right: 50px;
+	bottom: 157px;
+    right: 46px;
 	cursor: pointer;
 	
 }
