--- a/Css/components/footer.css
+++ b/Css/components/footer.css
@@ -172,6 +172,10 @@
 	letter-spacing: 1.6px;
 	text-align: right;
 	line-height: 24px;
+	margin-left: 340px;
+}
+
+.footer_certification i {
 	font-style: normal !important;
 }
 
