fix delete space footer

--- a/index.css
+++ b/index.css
@@ -25,7 +25,10 @@
 }
 body{
 	overflow-x: hidden;
+	display: flex;
+    flex-direction: column;
     min-height: 100vh;
+	position: relative;	
 }
 ::-webkit-scrollbar {
     width: 5px;
