--- a/Css/components/footer.css
+++ b/Css/components/footer.css
@@ -1,8 +1,10 @@
 .Footer{
 	width: 100%;
     height: 705.34px;
-	transform: translateY(-49%);
-	clear: both;
+	transform: translateY(51%);
+	overflow: hidden;	
+	position: absolute;
+	bottom: 0;
 }
 .footer_wrapper{
 	position: relative;
@@ -122,7 +124,7 @@
 	width: 50%;
 }
 .footer_more-children ul{
-	margin-top: 26px;
+	margin-top: 27px;
 }
 .footer_more-children ul li{
 	font-size: 16px;
@@ -145,7 +147,7 @@
 
 
 .footer_bottom{
-	margin-top: 81px;
+	margin-top: 80px;
     display: flex;
 }
 .footer_internet{
