--- a/Css/components/core.css
+++ b/Css/components/core.css
@@ -1,5 +1,6 @@
 .Core {
-	width: 1140px;
+	width: 100%;
+	max-width: 1140px;
 	height: 732px;
 	border-radius: 42px;
 	margin-top: 194px;
@@ -9,22 +10,23 @@
 
 .core_wrapper {
 	width: 100%;
-	height: 100%;
+	height: auto;
     display: flex;
 	flex-direction: column;
     align-items: center;
 }
 
 .title_desc {
-	width: 848px;
-	height: 192px;
+	width: 100%;
+	max-width: 848px;
+	height: auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
 .title_desc .info_tip {
-	width: 113px;
+	width: auto;
 	height: 20px;
 	line-height: 20px;
 	text-align: center;
@@ -41,7 +43,8 @@
 }
 
 .title_desc .info_description {
-	width: 848px;
+	width: 100%;
+	max-width: 848px;
 	height: 51px;
 	line-height: 24px;
 	letter-spacing: 1.6px;
@@ -55,6 +58,11 @@
 	margin-top: 11px;
 }
 
+.core_item_card {
+	width: 343px;
+	height: 458px;
+}
+
 .core_col{
 	display: flex;
 	justify-content: space-between;	
@@ -63,3 +71,34 @@
 	margin: 20px 0px;
 }
 
+@media (max-width: 1023px){
+	.Core {
+		height: auto;
+		margin: 50px 0 0 0;
+	}
+
+	.core_wrapper {
+		height: auto;
+		width: 100%;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.title_desc {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+	}
+
+	.core_item {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.core_item_card {
+		width: 100%;
+		max-width: 343px;
+		margin: 10px 0;
+	}
+}
