--- a/Css/components/about.css
+++ b/Css/components/about.css
@@ -1,6 +1,7 @@
 .About{
 	width: 100%;
-	height: 1028.89px;
+	height: auto;
+    margin-bottom: 276px;
 }
 
 .about_wrapper{
@@ -13,15 +14,19 @@
 	height: 100%;
 	background-image: url("../../assets/icon_home1/Background\ Bubble.png");
 	background-repeat: no-repeat;	
-	background-position: right bottom;
-	z-index: -2;
+	background-position: right top;
+	z-index: -1;
 	transform: translateY(-218px);
 }
 
 .about_container {
 	display: flex;
 	width: 100%;
-	height: 100%;
+	height: auto;
+}
+
+.about_container_left {
+	width: 51.5%
 }
 
 .about_title_desc {
@@ -41,7 +46,7 @@
 }
 
 .about_title_desc .about_title  {
-	width: 664px;
+	max-width: 664px;
 	height: 52px;
 	line-height: 45px;
 	color: var(--color-text-title);
@@ -96,80 +101,106 @@
 	letter-spacing: 1.6px;
 }
 
-.about_container_right svg{
-	position: absolute;
-	right: 70px;
-    bottom: 208px;
+.about_container_right {
+	width: 100%;
+	height: 100%;
+	padding: 44px 0 0 75px;
 }
-
-
-
-
-
-
-
-
-
-
 
 @media (max-width: 740px){
-	.about_title_desc {
-		/*display: flex;
-		justify-content: center;*/
-		text-align: center;
-		
+	.About {
+		height: auto;
+		width: 100%;
 	}
-	.about_description{
+
+	.about_wrapper {
+        justify-content: center;
+        align-items: center
+	}
+
+	.about_container {
+		flex-direction: column;
+		margin: auto;
+		width: 80%;
+	}
+
+	.about_container_left,
+	.about_container_right {
+		width: 100%; 
+		margin-bottom: 20px; 
+		display: flex;
+        justify-content: center;
+	}
+
+	.about_container_right {
+		padding: 0;
+	}
+
+	.about_container_right img {
+		margin-top: 100px;
+	}
+
+	.about_title_desc {
+		padding: 0;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+	}
+
+	.about_description {
 		width: 100%;
 		padding: 0 10px;
 		text-align: center;
 	}
-	.about_container_btnGroup{
+
+	.about_btn_group {
 		justify-content: center;
-	}
-	.about_row{
-		width: 100%;
-	}
-	.about_col{
-		
-		margin: 10px 0px;
-	}
-	
-	.about_right{
-		display: flex;
-		justify-content: center;
-	}
-	.about_container_btnLeft{
-		padding: 20px;
-		
-	}
-	.about_container_btnRight{
-		padding: 20px 0px;
-		width: 300px;
-		margin: 0px;
 	}
 
 }
-@media (min-width: 740px) and (max-width: 1112px){
-	.about_container_info{
-		display: flex;
-		justify-content: center;
-		flex-direction: column;
-		text-align: center;
+@media (min-width: 740px) and (max-width: 1164px){
+	.About {
+		height: auto;
+		width: 100%;
 	}
-	.about_container_describe{
+
+	.about_wrapper {
+        justify-content: center;
+        align-items: center
+	}
+
+	.about_container {
+		flex-direction: column;
+		margin: auto;
+		width: 80%;
+	}
+
+	.about_container_left,
+	.about_container_right {
+		width: 100%; 
+		display: flex;
+		margin-bottom: 20px; 
+		justify-content: center;
+	}
+
+	.about_container_right {
+		padding: 0;
+	}
+
+	.about_container_right img {
+		margin-top: 100px;
+	}
+
+	.about_title_desc {
+		padding: 0;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+	}
+
+	.about_description {
 		width: 100%;
 		padding: 0 10px;
 		text-align: center;
-	}
-	.about_row{
-		width: 100%;
-	}
-	.about_right{
-		display: flex;
-		justify-content: center;
-	}
-	.about_container_image{
-		max-width: 100%;
 	}
 }
