--- a/Css/components/core.css
+++ b/Css/components/core.css
@@ -11,9 +11,9 @@
 .core_wrapper {
 	width: 100%;
 	height: auto;
-    display: flex;
+  display: flex;
 	flex-direction: column;
-    align-items: center;
+  align-items: center;
 }
 
 .title_desc {
@@ -71,10 +71,11 @@
 	margin: 20px 0px;
 }
 
-@media (max-width: 1023px){
+@media (min-width: 740px) and (max-width: 1112px){
 	.Core {
 		height: auto;
 		margin: 50px 0 0 0;
+		padding: 20px;
 	}
 
 	.core_wrapper {
@@ -91,8 +92,7 @@
 		justify-content: center;
 	}
 
-	.core_item {
-		display: flex;
+	.core_col {
 		flex-direction: column;
 	}
 
