--- a/Css/components/about.css
+++ b/Css/components/about.css
@@ -1,22 +1,33 @@
 .About{
 	width: 100%;
 	height: auto;
-    margin-bottom: 276px;
+  margin-bottom: 276px;
+	background-color: var(--color-transparent);
 }
 
-.about_wrapper{
+.about_background {
 	position: relative;
 	display: flex;
 	align-items: center;
 	max-width: 1440px;
 	margin: auto;
-	padding-top: 352px;
 	height: 100%;
 	background-image: url("../../assets/icon_home1/Background\ Bubble.png");
 	background-repeat: no-repeat;	
 	background-position: right top;
 	z-index: -1;
 	transform: translateY(-218px);
+}
+
+.about_wrapper{
+	display: flex;
+	align-items: center;
+	max-width: 1440px;
+	margin: auto;
+	padding-top: 352px;
+	height: 100%;
+	transform: translateY(-218px);
+	
 }
 
 .about_container {
@@ -93,6 +104,10 @@
 	border: none;
 	padding: 0;
 	cursor: pointer;
+	transition: all 0.2s ease;
+}
+.about_container_btnRight:active {
+	transform: translateY(10px);
 }
 
 .about_container_btnText {
@@ -105,6 +120,12 @@
 	width: 100%;
 	height: 100%;
 	padding: 44px 0 0 75px;
+	border-radius: 50px;
+}
+
+.about_container_right:hover {
+	transition: all 0.7s ease;
+	transform: translateY(10px);
 }
 
 @media (max-width: 740px){
