--- a/Css/components/profession.css
+++ b/Css/components/profession.css
@@ -1,7 +1,10 @@
 .Profession{
-	width: 100%;
+	width: 1085px;
 	height: 861px;
-	margin-left: 3px;
+	display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 178px;
 	transform: translateY(-356px);
 }
 
@@ -52,48 +55,68 @@
 }
 
 .small {
-	margin-top: 59px;
+	margin-top: 178px;
 }
 
 .large {
-	margin: 0 40px;
+	margin-top: 180px;
 }
-
 
 .profession_item{
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-	width: 100%;
-	margin: 20px 0px;
+	width: 1085px;
+	margin: 0 auto;
+	height: 626px;
 }
 .profession_item_wrap {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-	flex-wrap: nowrap;
-	gap: 20px;
-	/* padding: 0 18px; */
+	width: 100%;
 }
 
 .profession_item_row{
 	flex: 1;
+	height: 100%;
 	min-height: 400px;
-	padding: 10px;
-	max-width: 100%;
-	transition: transform 0.9s ease, opacity 0.9s ease;
+	width: calc((1085px - 40px) / 3);
+	transition: all 0.9s ease;
+  background-color: transparent;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.profession_item_row:nth-child(2) {
+	background-color: var(--color-white);
+}
+
+.profession_item_row:hover {
+	cursor: pointer;
+}
+
+.profession_item_row.element.large {
+	background-color: var(--color-white);
 }
 
 .profession_item_row.not-hovered {
 	transform: translateX(20px);
 	opacity: 0.8;
-	width: calc(33.33% - 20px);
+	width: calc((1085px - 424px - 40px) / 2);
 }
 
 .profession_item_row.Card{
 	width: 424px;
-	margin-top: 59px;
+	height: 626px;
+	margin-top: 60px;
 	transform: translateY(-3px);
+	background-color: var(--color-white);
+}
+
+.profession_item_row:not(.Card) {
+	flex-grow: 1;
+	height: 100%;
+	background-color: transparent;
 }
 
 .card_professional {
@@ -168,7 +191,7 @@
 
 @media screen and (max-width: 768px) {
 	.profession_item_wrap {
-		padding: 0;`
+		padding: 0;
 	}
 
 	.profession_item_row {
@@ -178,5 +201,5 @@
 	.card_professional {
 		width: 100%;
 		max-width: 424px; 
-	  }
+	}
 }
