--- a/Css/components/slider.css
+++ b/Css/components/slider.css
@@ -8,7 +8,7 @@
 	align-items: center;
 	max-width: 1440px;
 	margin: auto;
-	padding-top: 187px;
+	padding-top: 185px;
 	height: 100%;
 	background-image: url("/assets/icon_home1/Slide_Background.png");
 	background-repeat: no-repeat;
@@ -57,6 +57,12 @@
 	width: 100%;
 	height: 100%;
 	padding: 73px 0 0 23px;
+	padding: 74px 0 0 22px;
+	transition: all 0.7s ease;
+}
+
+.slider_main-right:hover {
+	transform: translateY(5px);
 }
 
 .slider_main-right svg {
