--- a/Css/shares/button.css
+++ b/Css/shares/button.css
@@ -8,4 +8,15 @@
 	line-height: 24px;
 	cursor: pointer;
 	border-radius: 50px;
+	transition: all 0.2s ease;
+}
+
+.btn:hover {
+	background-color: var(--color-text-title);
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.btn:active {
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	transform: translateY(2px);
 }
