--- a/Css/components/core.css
+++ b/Css/components/core.css
@@ -77,7 +77,39 @@
 	margin: 20px 0px;
 }
 
-@media (min-width: 740px) and (max-width: 1112px){
+@media (min-width: 1023px) and (max-width: 1299px){
+	.Core {
+		height: auto;
+		margin: 50px 0 0 0;
+		padding: 20px;
+	}
+
+	.core_wrapper {
+		height: auto;
+		width: 100%;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.title_desc {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+	}
+
+	.core_col {
+		flex-direction: column;
+	}
+
+	.core_item_card {
+		width: 100%;
+		max-width: 343px;
+		margin: 10px 0;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 1022px) {
 	.Core {
 		height: auto;
 		margin: 50px 0 0 0;
