--- a/Css/shares/textbox.css
+++ b/Css/shares/textbox.css
@@ -18,11 +18,18 @@
 	line-height: 24px;
 	border: 1px solid var(--color-border-text);
 	border-radius: 15px;
-	padding-left: 23px;
 	background: var(--color-white);
 	color: var(--color-text-input);
 	letter-spacing: 1.6px;
 	width: 100%;
+}
+
+.pd-l-23 {
+	padding-left: 23px;
+}
+
+.pd-l-27 {
+	padding-left: 27px;
 }
 
 .contact_input {
