--- a/Css/util/animation.css
+++ b/Css/util/animation.css
@@ -73,3 +73,53 @@
 	}
 }
 
+
+
+/* ! HEADER */
+
+/* ! SLIDER */
+.slider_main-right:hover {
+	transform: translateY(5px);
+}
+
+/* ! CORE */
+.core_item_card:hover {
+	transform: translateY(10px);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* ! ABOUT */
+.about_container_btnRight:active {
+	transform: translateY(10px);
+}
+
+.about_container_right:hover {
+	transition: all 0.7s ease;
+	transform: translateY(10px);
+}
+
+/* ! PROFESSION */
+.profession_item_row:nth-child(2) {
+	background-color: var(--color-white);
+}
+
+.profession_item_row:hover {
+	cursor: pointer;
+}
+
+.profession_item_row.not-hovered {
+	transform: translateX(20px);
+	opacity: 0.8;
+	width: calc((1085px - 424px - 40px) / 2);
+}
+
+.profession_item_row:not(.Card) {
+	flex-grow: 1;
+	height: 100%;
+	background-color: transparent;
+}
+
+
+/* ! CONTACT */
+
+/* ! FOOTER */
