--- a/Css/components/header.css
+++ b/Css/components/header.css
@@ -1,5 +1,4 @@
-
-.Header{
+.Header {
 	position: absolute;
 	top: 41px;
 	z-index: 1;
@@ -9,34 +8,35 @@
 	background-color: var(--color-transparent);
 	transition: .3s;
 }
-.Header_scroll{
+
+.Header_scroll {
 	position: fixed !important;
 	top: 0px !important;
 	z-index: 100;
 	background-color: var(--color-box-shadow) !important;
 	transition: .3s;
 	box-shadow: 0px 5px 20px .5px var(--color-box-header);
-
 }
-.Header_wrapper{
+
+.Header_wrapper {
 	position: relative;
 	max-width: 1140px;
 	height: 63px;
 	margin: auto;
 	margin-top: 10px;
 	margin-bottom: 10px;
-
 }
-.Header_logo{
+
+.Header_logo {
 	position: absolute;
 	display: flex;
-    align-items: center;
+  align-items: center;
 }
 
 .logo {
 	position: relative;
 	top: -9px;
-    left: 3px;
+  left: 3px;
 	width: 63px;
 	height: 63px;
 	background-color: #FF64AE;
@@ -47,7 +47,7 @@
 .dot-large {
 	position: absolute;
 	top: 10px;
-    left: 11px;
+  left: 11px;
 	width: 13px;
 	height: 13px;
 	background-color: #FFFFFF;
@@ -57,7 +57,7 @@
 .dot-small {
 	position: absolute;
 	top: 22px;
-    left: 25px;
+  left: 25px;
 	width: 6px;
 	height: 6px;
 	background-color: #FFFFFF;
@@ -67,7 +67,7 @@
 .rectangle {
 	position: absolute;
 	top: 25px;
-    left: 39px;
+  left: 39px;
 	width: 40px;
 	height: 11px;
 	background-color: #091156;
@@ -77,7 +77,7 @@
 .logo-text {
 	position: relative;
 	top: -10px;
-    left: 37px;
+  left: 37px;
 	width: 161px;
 	height: 34px;
 }
@@ -99,10 +99,10 @@
 	align-items: center;
 }
 
-.Header_menu{
+.Header_menu {
 	position: absolute;
 	top: 8px;
-    left: 436px;
+  left: 436px;
 	display: block;
 }
 
@@ -113,12 +113,11 @@
 	padding: 0;
 }
 
-.Header_menu-children li{
+.Header_menu-children li {
 	float: left;
-	
-	
 }
-.Header_menu-children a{
+
+.Header_menu-children a {
 	font-style: normal;
 	font-weight: 300;
 	font-size: 16px;
@@ -127,28 +126,28 @@
 	color: var(--color-text-default);
 	padding: 0 16px;
 }
-.Header_menu-children li .active{
+
+.Header_menu-children li .active {
 	font-weight: 600px;
 }
 
-
-.Header a:hover{
+.Header a:hover {
 	font-weight: 600;
-    color: var(--color-text-hover);
+  color: var(--color-text-hover);
 }
 
-
-.Header_contact{
+.Header_contact {
 	position: absolute;
 	top: 20px;
-    left: 985px;
+  left: 985px;
 	transform: translateY(-50%);
-	
 }
-.Header_contact .contact-btn{
+
+.Header_contact .contact-btn {
 	width: 158px;
 	height: 52px;
 }
+
 .Header_icon{
 	width: 30px;
 	height: 5px;
@@ -157,10 +156,9 @@
 	top: 50%;
 	transform: translate(-50%,-50%);
 	background-color: var(--color-pink);
-	
-
 }
-.Header_tog{
+
+.Header_tog {
 	display: none;
 	position: absolute;	
 	right: 20px;
@@ -170,32 +168,33 @@
 	border: 1px solid var(--color-pink);
 	border-radius: 5px;
 	cursor: pointer;
-	
-
 }
-.Header_icon::after , .Header_icon::before{
+
+.Header_icon::after, 
+.Header_icon::before {
 	content: "";
 	position: absolute;
-	
 	width: 30px;
 	height: 5px;
 	background-color: var(--color-pink);
 }
-.Header_icon::after{
-
+.Header_icon::after {
 	transform: translateY(-200%);
 }
-.Header_icon::before{
+
+.Header_icon::before {
 	transform: translateY(200%);
 }
-#checkTap{
+
+#checkTap {
 	display: none;
 }
-#checkTap:checked ~ .Header_sidebar{
+
+#checkTap:checked ~ .Header_sidebar {
 	display: block !important;
 }
-#checkTap:checked ~ .Header_more{
-	
+
+#checkTap:checked ~ .Header_more {
 	position: fixed;
 	height: 100%;
 	right: 0px;
@@ -204,30 +203,32 @@
 	background-color: var(--color-white);
 	z-index: 110;
 }
-#checkTap:checked ~ .Header_more > .Header_menu{
+
+#checkTap:checked ~ .Header_more > .Header_menu {
 	display: block !important;
 	right: none;
 	top: 30%;
 	left: 10px;
 }
-#checkTap:checked ~ .Header_more > .Header_contact{
+
+#checkTap:checked ~ .Header_more > .Header_contact {
 	display: block !important;
 	left: 50%;
 	top: 60%;
 	transform: translateX(-80%);
 }
-#checkTap:checked ~ .Header_more > .Header_menu > ul{
-	
+
+#checkTap:checked ~ .Header_more > .Header_menu > ul {
 	display: flex;
 	flex-direction: column;
-
-
 }
-#checkTap:checked ~ .Header_more > .Header_menu > ul > li{
+
+#checkTap:checked ~ .Header_more > .Header_menu > ul > li {
 	width: 100%;
 	padding: 10px;
 }
-.Header_sidebar{
+
+.Header_sidebar {
 	position: fixed;
 	top: 0px;
 	left: 0px;
@@ -236,29 +237,20 @@
 	z-index: 100;
 	display: none;
 	background-color: #0000007a;
-
 }
 
-
-
-@media (max-width: 1023px){
-	.Header_menu{
+@media (max-width: 1023px) {
+	.Header_menu {
 		display: none;
 	}
-	.Header_tog{
+	.Header_tog {
 	display: block;
 
 	}
-	.Header_contact{
+	.Header_contact {
 		margin-top: 121px;
 	}
-	.Header_sidebar{
+	.Header_sidebar {
 		display: none !important;
 	}
-
 }
-/*@media (min-width: 1024px){
-	.Header_sidebar{
-		display: none !important;
-	}
-}*/
