--- a/Css/shares/textbox.css
+++ b/Css/shares/textbox.css
@@ -1,4 +1,4 @@
-.form_group{
+.form_group {
 	width: 100%;
 	margin: 38px auto;
 }
@@ -13,7 +13,7 @@
 	height: 61.58px;
 }
 
-.form_controll{
+.form_control {
 	font-size: 16px;
 	line-height: 24px;
 	border: 1px solid var(--color-border-text);
@@ -36,7 +36,7 @@
 	height: 61.58px;
 }
 
-.form_controll::placeholder{
+.form_control::placeholder {
 	opacity: .6;
 }
 
@@ -56,4 +56,3 @@ textarea:focus-visible{
 	height: 58px;
 	margin-top: 10px;
 }
-
