--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@
 
 
 :root {
+	--color-black : #000;
 	--color-pink : #FF64AE;
 	--color-white: #FFFFFF;
 	--color-text-default: #8B8B8B;
@@ -75,8 +76,7 @@ button
 textarea {
   border: none;
 	outline: none;
-	color: #091156;
-	caret-color:#FF64AE;
+	caret-color: var(--color-pink);
 }
 
 ul {
