--- a/Css/components/about.css
+++ b/Css/components/about.css
@@ -5,20 +5,6 @@
 	background-color: var(--color-transparent);
 }
 
-.about_background {
-	position: relative;
-	display: flex;
-	align-items: center;
-	max-width: 1440px;
-	margin: auto;
-	height: 100%;
-	background-image: url("../../assets/icon_home1/Background\ Bubble.png");
-	background-repeat: no-repeat;	
-	background-position: right top;
-	z-index: -1;
-	transform: translateY(-218px);
-}
-
 .about_wrapper {
 	display: flex;
 	align-items: center;
@@ -26,8 +12,22 @@
 	margin: auto;
 	padding-top: 352px;
 	height: 100%;
+	position: relative;
 	transform: translateY(-218px);
+}
 
+.about_wrapper::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url("../../assets/icon_home1/Background\ Bubble.png");
+	background-repeat: no-repeat;	
+	background-position: right top;
+	z-index: -1;
+	transform: translateY(-2px);
 }
 
 .about_container {
@@ -37,7 +37,8 @@
 }
 
 .about_container_left {
-	width: 51.5%
+	width: 51.5%;
+	margin-top: 1px;
 }
 
 .about_title_desc {
@@ -85,6 +86,7 @@
 .about_container_btnLeft {
 	width: 200px;
 	height: 58.36px;
+	padding: 3px 1px 3px 4px;
 }
 
 .about_btnRight {
@@ -120,7 +122,7 @@
 .about_container_right {
 	width: 100%;
 	height: 100%;
-	padding: 44px 0 0 75px;
+	padding: 44px 0 0 72px;
 	border-radius: 50px;
 }
 
