--- a/Css/shares/textbox.css
+++ b/Css/shares/textbox.css
@@ -55,7 +55,8 @@ textarea:focus-visible{
 .form_btn {
 	width: 248px;
 	height: 58px;
-	margin-top: 10px;
+	margin-top: 12px;
+	padding: 0 1px 3px 4px;
 }
 @media (max-width: 740px) {
 	.pd-l-r {
